# CURWIELTS

./: .env.example  .gitignore  GUIDE.md  PLAN.md  README.md  check_logs.py  test_scoring.py
.commandcode/taste/: taste.md
backend/: IELTS-Scorer.spec  build_frontend.py  pyproject.toml  requirements.txt  run_exe.py
backend/app/: config.py  logging_setup.py  main.py  storage.py
backend/app/agents/: band_score_aggregator.py  base_agent.py  coherence_cohesion_agent.py  error_analysis_agent.py  essay_structure_agent.py  grammatical_range_agent.py  lexical_resource_agent.py  personalized_feedback_agent.py  quality_control_agent.py  task_response_agent.py  vocabulary_extraction_agent.py
backend/app/api/: admin.py  auth.py  errors.py  essays.py  feedback.py  learning.py  models.py  router.py  scoring.py  users.py  vocabulary.py
backend/app/knowledge_base/: ingest.py  parser.py  retriever.py  vector_store.py
backend/app/llm/: base.py  chatgpt.py  deepseek.py  gemini.py  grok.py  groq.py  router.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: scoring_service.py
backend/app/static/: index.html
backend/app/static/assets/: index-dTuju2W1.css
backend/app/utils/: auth.py  text_processing.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Dashboard.tsx  EssayDetail.tsx  EssayHistory.tsx  NewEssay.tsx  ProgressPage.tsx  SettingsPage.tsx  VocabularyPage.tsx
(+11 files in other folders)
